updated html file

--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Dipti's Personal Website</title>
+    <style>
+        body {
+            background-color: #c2dbf9;
+        }
+        img {
+            height: 300px;
+        }
+        hr {
+            border: none;
+            height: 6px;
+            border-top: 7px dotted rgb(255, 255, 255);
+            width: 30%;
+        }
+    </style>
 </head>
-<body>
+<body >
     <table cellspacing="20">
         <tr>
             <td><img src="images/dipti.jpg" alt="Dipti"></td>
