--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         hr {
             border: none;
             height: 6px;
+            background-color: transparent;
             border-top: 7px dotted rgb(255, 255, 255);
             width: 30%;
         }
