updated html file

--- a/index.html
+++ b/index.html
@@ -3,21 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Dipti's Personal Website</title>
-    <style>
-        body {
-            background-color: #c2dbf9;
-        }
-        img {
-            height: 300px;
-        }
-        hr {
-            border: none;
-            height: 6px;
-            background-color: transparent;
-            border-top: 7px dotted rgb(255, 255, 255);
-            width: 30%;
-        }
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body >
     <table cellspacing="20">
