--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body >
     <table cellspacing="20">
         <tr>
-            <td><img src="images/dipti.jpg" alt="Dipti"></td>
+            <td><img class="myprofile" src="images/dipti.jpg" alt="Dipti"></td>
             <td>
                 <h1>Dipti Raj Sah</h1>
                 <p><em>B.Tech <strong>CSE</strong> student in <strong>NITW</strong></em></p>
